--- a/src/style.css
+++ b/src/style.css
@@ -496,7 +496,7 @@ button {
   border-style: solid;
   border-color: #99c8a0;
   border-width: 1px;
-  padding: 17px 50px 17px 50px;
+  padding: 17px 0px 17px 50px;
   display: flex;
   flex-direction: row;
   gap: 10px;
@@ -526,7 +526,7 @@ button {
   border-style: solid;
   border-color: #99c8a0;
   border-width: 2px;
-  padding: 17px 50px 17px 50px;
+  padding: 17px 30px 17px 0px;
   display: flex;
   flex-direction: row;
   gap: 10px;
@@ -547,7 +547,7 @@ button {
   border-style: solid;
   border-color: #99c8a0;
   border-width: 1px;
-  padding: 17px 50px 17px 50px;
+  padding: 17px 30px 17px 50px;
   display: flex;
   flex-direction: row;
   gap: 10px;
@@ -573,7 +573,7 @@ button {
   border-style: solid;
   border-color: #99c8a0;
   border-width: 0.5px;
-  padding: 4px 8px 4px 8px;
+  padding: 15px 35px 17px 10px;
   display: flex;
   flex-direction: row;
   gap: 10px;
@@ -602,16 +602,17 @@ button {
   font-weight: var(--desktop-body-3-font-weight, 500);
   opacity: 0.8;
   position: relative;
-  width: 32px;
-  height: 20px;
+  width: 80px;
+  height: 30px;
 }
 .frame-1126 {
   background: #ffffff;
-  border-radius: 3px;
+  border-radius: 5px;
   border-style: solid;
   border-color: #99c8a0;
   border-width: 0.5px;
-  padding: 4px 8px 4px 8px;
+  /* padding: 1px 10px -1px 8px; */
+  padding: 15px 35px 17px 10px;
   display: flex;
   flex-direction: row;
   gap: 10px;
@@ -634,15 +635,18 @@ button {
 
 .table-cell13 {
   background: #ffffff;
-  border-radius: 3px;
+  width: auto; /* Để nút mở rộng theo nội dung */
+  min-width: 80px;
+  border-radius: 5px;
   border-style: solid;
   border-color: #99c8a0;
   border-width: 0.5px;
+  padding: 1px 2px;  
   display: flex;
-  flex-direction: column;
-  gap: 0px;
+  /* flex-direction: column; */
+  /* gap: 10px;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: flex-start;  */
   width: 80px;
   height: 35px;
   position: absolute;
@@ -656,14 +660,13 @@ button {
   font-size: var(--desktop-body-3-font-size, 14px);
   line-height: var(--desktop-body-3-line-height, 130%);
   font-weight: var(--desktop-body-3-font-weight, 500);
-  position: relative;
+  /* position: relative; */
   align-self: stretch;
   display: flex;
   flex-direction: row;
   align-items: center; /* Căn giữa theo chiều dọc */
   justify-content: flex-start; /* Căn trái theo chiều ngang */
-  padding-left: 10px;
-}
+  }
 .table-cell14 {
   background: #ffffff;
   display: flex;
