--- a/src/css/LoginForm.css
+++ b/src/css/LoginForm.css
@@ -129,20 +129,61 @@ body {
 }
 
 .captcha-box {
-  width: 100%;
-  height: 35px;
-  background-color: #eee;
+  width: 200px;
+  height: 40px;
+  background: #fff;
+  border: 1px solid #ddd;
   border-radius: 4px;
-  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.captcha-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.captcha-svg {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.captcha-svg svg {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.captcha-svg path {
+  fill: #222;
 }
 
 .refresh-captcha {
   background: none;
   border: none;
   cursor: pointer;
-  padding: 0;
+  padding: 5px;
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+
+.refresh-captcha svg {
+  width: 20px;
+  height: 20px;
+}
+
+.error-message {
+  color: #dc3545;
+  font-size: 14px;
+  margin-top: 10px;
+  text-align: center;
 }
 
 .checkbox-row {
